# schedule-service

./: .env.local  .xsdata.xml  Dockerfile  app.py  jukebox.py  playout.py  pyproject.toml  tvanytime.py  tvanywhere.py
.github/workflows/: build-image.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  service.yaml
database/: item.py  schedule.py  schedule_alternate.py
schema/: tva_metadata_3-1.xsd
schema/tva/metadata/pkg_2019/: __init__.py  aggregation_of_type.py  aggregation_of_type_type.py  aspect_ratio_type.py  aspect_ratio_type_type.py  audio_attributes_type.py  audio_language_type.py  avattributes_type.py  award_type.py  awards_list_item_type.py  awards_list_type.py  base_derivation_reason_type.py  base_member_of_type.py  base_program_group_type_type.py  base_segment_group_type_type.py  basic_content_description_type.py  basic_segment_description_type.py  bit_rate_type.py  broadcast_event_type.py  caption_language_type.py  captioning_attributes_type.py  classification_scheme_table_type.py  color_type.py  color_type_type.py  controlled_term_type.py  creation_coordinates_type.py  credits_information_table_type.py  credits_item_type.py  credits_list_type.py  cridref_type.py  csalias_type.py  delivery_mode_type.py  depicted_coordinates_type.py  derivation_reason_type.py  derivation_reason_type_value.py  derived_from_type.py  device_type.py  device_type_access_setting.py  device_type_access_status.py  device_type_device_os.py  (+113 more)
schema/tva/mpeg7/pkg_2008/: __init__.py  agent_type.py  auxiliary_language_type_value.py  controlled_term_use_type.py  (+120 more)
(+1 files in other folders)
