[project]
name = "schedule-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "jsonpickle>=4.1.1",
    "mypy>=1.11",
    "psycopg[binary]>=3.2.9",
    "pytz>=2025.2",
    "xsdata[cli,lxml]>=25.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 100

[tool.mypy]
plugins = [
  "pydantic_xml.mypy"
]
